--- a/interfaces/window.ui
+++ b/interfaces/window.ui
@@ -319,5 +319,21 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>Barre_Toolbox</sender>
+   <signal>visibilityChanged(bool)</signal>
+   <receiver>actionToolBox</receiver>
+   <slot>setChecked(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>99</x>
+     <y>279</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
 </ui>
