--- a/ressource.qrc
+++ b/ressource.qrc
@@ -6,5 +6,6 @@
     <qresource prefix="/icons">
         <file>icons/cube.png</file>
         <file>icons/nail.png</file>
+        <file>icons/new.png</file>
     </qresource>
 </RCC>
