--- a/css/style.css
+++ b/css/style.css
@@ -13,3 +13,20 @@ html, body
     height: 100%;
     touch-action: none;
 }
+#fpsLabel
+{
+    position: absolute;
+    right: 15px;
+    top: 0px;
+    cursor: default;
+    display: inline-block;
+    padding: 2px 4px;
+    font-size: 11.844px;
+    font-weight: bold;
+    line-height: 14px;
+    color: #fff;
+    text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
+    white-space: nowrap;
+    vertical-align: baseline;
+    background-color: #999;
+}
