--- a/css/style.css
+++ b/css/style.css
@@ -15,11 +15,16 @@ html, body
 }
 #fpsLabel
 {
-    position: absolute;
-    right: 15px;
-    top: 0px;
+    position: relative;
     cursor: default;
-    display: inline-block;
+}
+.container-fluid
+{
+    margin: 0 !important;
+}
+
+.label
+{
     padding: 2px 4px;
     font-size: 11.844px;
     font-weight: bold;
