--- a/css/style.css
+++ b/css/style.css
@@ -14,12 +14,33 @@ html, body
     margin-bottom: 10px;
 }
 
-#renderCanvas
-{
-    width: 100%;
-    height: 100%;
-    touch-action: none;
+@media screen and (min-width: 1800px){
+    #renderCanvas
+    {
+        width: 1550px;
+        height: 862px;
+        touch-action: none;
+    }
 }
+
+@media screen and (max-width: 1799px){
+    #renderCanvas
+    {
+        width: 1325px;
+        height: 670px;
+        touch-action: none;
+    }
+}
+
+@media screen and (max-width: 1400px){
+    #renderCanvas
+    {
+        width: 1127px;
+        height: 540px;
+        touch-action: none;
+    }
+}
+
 
 .label1
 {
@@ -27,8 +48,8 @@ html, body
     position: relative !important;
     display: block !important;
     padding: 10px 15px;
-}
 
+}
 .container-fluid
 {
     margin: 0 !important;
@@ -54,9 +75,24 @@ p
     margin-bottom: 10px;
 }
 
-.collapse.in {
-    overflow : auto;
-    height: 615px;
+@media screen and (min-width: 1801px){
+    .collapse.in {
+        overflow : auto;
+        height: 800px;
+    }
+}
+
+@media screen and (max-width: 1800px){
+    .collapse.in {
+        overflow : auto;
+        height: 615px;
+    }
+}
+
+    .collapse.in {
+        overflow : auto;
+        height: 450px;
+    }
 }
 
 .hiden {
