Cacher les boutons groupe au depart

--- a/css/style.css
+++ b/css/style.css
@@ -168,3 +168,8 @@ input[type="number"]{
 .btn-group-vertical>.btn, .btn-group>.btn{
     width: 60px;
 }
+
+.nav>li.grp 
+{
+    display : none ;
+}
